k8s/deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  namespace: jenkins

spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
    
  template:
    metadata:
      labels:
       app: demo-app

    spec:
      containers:
        - name: demo-container
          image: IMAGE_PLACEHOLDER
          imagePullPolicy: Always
          ports:
          - containerPort: 80

          resources:
            requests:
             memory: "128Mi"
             cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
