k8s/service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: jenkins

spec:
  selector:
    app: demo-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  type: ClusterIP
